manifests/myapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.dagobah.system
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 5000
        path: /
        pathType: Prefix
